syntax = "proto3";
package task.service.v1;
option go_package = "project-project/pkg/service/task.service.v1";

message TaskReqMessage {
  int64 memberId = 1;
  string projectCode = 2;
  int64 page = 3;
  int64 pageSize = 4;
  string stageCode = 5;
  string name = 6;
  string assignTo = 7;
  int32 taskType = 8;
  int32 type = 9;
  string preTaskCode = 10;
  string nextTaskCode = 11;
  string toStageCode = 12;
}

message TaskStagesMessage{
  string code = 1;
  string name = 2;
  string projectCode = 3;
  int32 sort = 4;
  string description = 5;
  string createTime = 6;
  int32 deleted = 7;
  int32 id = 8;
}

message TaskStagesResponse{
  int64 total = 1;
  repeated TaskStagesMessage list = 2;
}

service ProjectService {
  rpc TaskStages(TaskReqMessage) returns (TaskStagesResponse) {}
}